--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -53,6 +53,7 @@ $this: ".odpv.form";
     box-shadow: inset 0 0 4px 0 $color-light-grey;
 
     border: 0;
+    border-radius: 4px;
 
     &:-webkit-autofill {
       -webkit-text-fill-color: $color-black !important;
@@ -61,6 +62,28 @@ $this: ".odpv.form";
     &:focus {
       outline: none;
       box-shadow: inset 0 0 4px 0 $color-dark-grey;
+    }
+
+    &:disabled,
+    &.disabled {
+      color: $input-disabled-text;
+      background-color: $input-disabled-background;
+
+      &::-webkit-input-placeholder {
+        color: $input-disabled-text;
+      }
+
+      &:-moz-placeholder {
+        color: $input-disabled-text;
+      }
+
+      &::-moz-placeholder {
+        color: $input-disabled-text;
+      }
+
+      &:-ms-input-placeholder {
+        color: $input-disabled-text;
+      }
     }
   }
 }
