--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -86,4 +86,230 @@ $this: ".odpv.form";
       }
     }
   }
+
+  &__control {
+    height: $input-height-base;
+
+    /* Firefox 18- */
+    &:-moz-placeholder {
+      color: $color-light-grey;
+      font-style: italic;
+      font-weight: bold;
+    }
+
+    /* Firefox 19+ */
+    &::-moz-placeholder {
+      color: $color-light-grey;
+      font-style: italic;
+      font-weight: bold;
+    }
+
+    &:-ms-input-placeholder {
+      color: $color-light-grey;
+      font-style: italic;
+      font-weight: bold;
+    }
+
+    &[type="hidden"] {
+      height: auto;
+    }
+
+    &[type="number"]::-webkit-inner-spin-button,
+    &[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    &[type="file"] {
+      padding-top: 7px;
+    }
+
+    &[type="checkbox"],
+    &[type="radio"] {
+      position: absolute;
+      z-index: 1;
+      opacity: 0;
+
+      width: 22px;
+      height: 22px;
+
+      margin: -1px 0 10px;
+
+      cursor: pointer;
+
+      + #{$this}__label {
+        display: inline-block;
+        position: relative;
+
+        padding: 0 30px;
+        margin: 0 0 -1px;
+
+        font-size: 16px;
+        font-weight: normal;
+        line-height: 1.25;
+        text-transform: none;
+
+        color: $color-black;
+
+        cursor: pointer;
+
+        &:hover {
+          opacity: 1;
+        }
+
+        &:before,
+        &:after {
+          content: " ";
+          position: absolute;
+          display: inline-block;
+
+          bottom: 0;
+          left: 0;
+
+          margin-right: 10px;
+
+          background-color: transparent;
+
+          box-sizing: border-box;
+
+          @include border-radius(3px);
+          @include transition;
+        }
+
+        &:before {
+          border: none;
+
+          top: -1px;
+
+          width: 15px;
+          height: 15px;
+
+          margin: 3px;
+        }
+
+        &:after {
+          top: -1px;
+          width: 21px;
+          height: 21px;
+
+          box-shadow: inset 0 0 3px 0 $color-grey;
+        }
+      }
+
+      &:checked {
+        & + #{$this}__label {
+          &:before {
+            text-align: center;
+
+            @include animation("scaleUp", 0.25s, "normal");
+          }
+
+          &:after {
+            box-shadow: inset 0 0 3px 0 $color-dark-grey;
+          }
+        }
+      }
+
+      &:disabled {
+        cursor: default;
+
+        + #{$this}__label {
+          cursor: default;
+          color: $color-grey;
+
+          &:before,
+          &:after {
+            cursor: default;
+          }
+
+          &:after {
+            border-color: $color-light-grey;
+            background-color: $input-disabled-background;
+          }
+        }
+
+        &:checked {
+          + #{$this}__label {
+            &:before {
+              z-index: 1;
+            }
+          }
+        }
+      }
+    }
+
+    &[type="radio"] {
+      @include border-radius(50%);
+
+      + #{$this}__label {
+        &:before,
+        &:after {
+          @include border-radius(50%);
+        }
+      }
+
+      &:focus {
+        + #{$this}__label {
+          &:before {
+            box-shadow: inset 0 0 3px 0 $color-dark-grey;
+          }
+        }
+      }
+
+      &:checked {
+        + #{$this}__label {
+          &:before {
+            background-color: $input-border-focus-color;
+          }
+        }
+
+        &:disabled + #{$this}__label {
+          &:before {
+            background-color: $color-light-grey;
+          }
+        }
+      }
+    }
+
+    &[type="checkbox"] {
+      + #{$this}__label {
+        &:before {
+          background-image: none;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 15px;
+        }
+      }
+
+      &:checked {
+        + #{$this}__label {
+          &:before {
+          }
+        }
+      }
+
+      &:disabled {
+        &:checked + #{$this}__label {
+          &:before {
+          }
+        }
+      }
+
+      &:focus {
+        + #{$this}__label {
+          &:after {
+            box-shadow: inset 0 0 3px 0 $color-black;
+          }
+        }
+
+        &:checked {
+          + #{$this}__label {
+            &:after {
+              box-shadow: inset 0 0 3px 0 $color-black;
+            }
+          }
+        }
+      }
+    }
+  }
 }
