--- a/src/assets/scss/page/_header.scss
+++ b/src/assets/scss/page/_header.scss
@@ -1,7 +1,28 @@
 $this: ".odpv.header";
 
 #{$this} {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 15px 20px;
+  -webkit-box-shadow: 0 2px 4px rgba(30, 60, 90, 0.1);
+  box-shadow: 0 2px 4px rgba(30, 60, 90, 0.1);
+
+  .logo {
+    width: 90px;
+  }
+
   &--aside {
     display: none;
+
+    &-ativo {
+      display: block;
+    }
   }
 }
